ok gotta stop, jeez. the tiles have much more weight now, need to adjust --tile to account for gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ main {
     -webkit-perspective: calc(3*(var(--tile)));
     perspective: calc(3*(var(--tile)));
     grid-template: repeat(6, var(--tile)) / repeat(3, var(--tile));
+    gap: 4px;
     /* gap: calc(0.03*(var(--tile))); */
     /* text-align: center; */
     /* padding: 0; */
@@ -54,7 +55,8 @@ main .tiles {
     font-weight: bold;
     text-shadow: 0 0 .2em rgba(255, 255, 255, 0.75);
     padding: 1em;
-    box-shadow: inset 1vh 0 1vh  rgba(255,255,255,.7),      /*left*/
+    box-shadow: 1px 1px 4px 1px black,
+                inset 1vh 0 1vh  rgba(255,255,255,.7),      /*left*/
                 inset -1vh 0 1vh  rgba(0,0,0,.5),           /*right*/
                 inset 0 1vh 1vh  rgba(255,255,255,.7),      /*top*/
                 inset 0 -1vh 1vh  rgba(0,0,0,.5),           /*bottom*/
@@ -70,7 +72,7 @@ main .tiles {
     filter: brightness(110%) saturate(110%);
 }
 
-.tiles:active:not(#social-buttons-container) {
+.tiles:active:not(#social-buttons-container, #logo) {
     transition-duration: 200ms;
     box-shadow: inset .5vh 0vh .7vh  rgba(0, 0, 0, .5),      /*left*/
                 inset -1vh 0 .7vh   rgba(0, 0, 0, .7),           /*right*/
